--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,8 @@ set -g escape-time 0  # Remove delay for exiting insert mode with ESC in Neovim
 set -g history-limit 1000000  # Increase history size (from 2,000)
 set -g mouse on  # Enable mouse support
 
+# Press Prefix + r to reload tmux config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 # Status bar styling (Gruvbox Material Hard)
 set -g status-bg colour234  # dark background
