--- a/i3/config
+++ b/i3/config
@@ -1,4 +1,8 @@
-exec --no-startup-id ~/set_once.sh
+#exec --no-startup-id ~/set_once.sh
+
+# Set DP-4 to 1920x1080 @ 239.76Hz
+exec --no-startup-id xrandr --output DP-4 --mode 1920x1080 --rate 239.76
+
 # This file is a modified version based on default i3-config-wizard config
 # source is available here:
 # https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/etc/skel/.config/i3/config
@@ -370,7 +374,7 @@ set $ws0 "0:0"
 #exec_always --no-startup-id picom -b
 #
 # for custom config:
-exec_always --no-startup-id picom --config  ~/.config/picom/picom.conf
+exec --no-startup-id picom --config  ~/.config/picom/picom.conf
 
 #############################################
 # autostart applications/services on login: #
@@ -401,7 +405,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # start a script to setup displays
 # uncomment the next line, use arandr to setup displays and save the file as monitor:
-exec --no-startup-id ~/.screenlayout/monitor.sh
+#exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
 # exec --no-startup-id sleep 2 && nitrogen --restore
