--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -42,28 +42,26 @@ markup=pango
 
 #[Weather]
 #command=~/.config/i3/scripts/openweather
-# or:
-#command=~/.config/i3/scripts/openweather-city
 #interval=1800
 #color=#7275b3
 
 #[terminal]
-#full_text=  
+#full_text= 
 #color=#807dfe
-#command=i3-msg -q exec wezterm
+#command=i3-msg -q exec xfce4-terminal
 
 #[browser]
-#full_text=  
+#full_text= 
 #color=#ff7f81
 #command=i3-msg -q exec firefox
 
 #[files]
-#full_text=  
+#full_text= 
 #color=#7f3fbf
 #command=i3-msg -q exec thunar ~/
 
 #[mail]
-#full_text=  
+#full_text= 
 #color=#dbcb75
 #command=i3-msg -q exec thunderbird
 
@@ -116,10 +114,16 @@ interval=30
 command=~/.config/i3/scripts/bandwidth2
 interval=persist
 
+#[vpn]
+#command=~/.config/i3/scripts/vpn
+#init_color=#FFFF00
+#on_color=#00FF00
+#label=VPN:
+#interval=5
+
 # Battery indicator
 #[battery]
-#command=~/.config/i3/scripts/battery2
-# for alternative battery script  change to battery1
+#command=~/.config/i3/scripts/battery
 # change this to battery-pinebook-pro if you are running on pinebook-pro
 #label=
 #interval=30
@@ -129,13 +133,12 @@ full_text=: :
 color=#717171
 
 [pavucontrol]
-full_text= 
+full_text=♪
 command=pavucontrol
 
-[volume-pulseaudio]
+[volume]
 command=~/.config/i3/scripts/volume
-instance=Master
-interval=1
+interval=2
 
 # display keyboard layout name
 # for keyboard layouts switcher
@@ -146,9 +149,9 @@ interval=1
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
 
-[keybindings]
-full_text= 
-command=~/.config/i3/scripts/keyhint
+#[keybindings]
+#full_text= 
+#command=~/.config/i3/scripts/keyhint
 
 # power-profiles-daemon implementation:
 # needs package power-profiles-daemon installed and the service running see here:
@@ -156,7 +159,7 @@ command=~/.config/i3/scripts/keyhint
 
 #set power-profile
 [ppd_menu]
-full_text= 
+full_text=
 command=~/.config/i3/scripts/power-profiles
 color=#407437
 
@@ -165,9 +168,16 @@ color=#407437
 command=~/.config/i3/scripts/ppd-status
 interval=5
 
+[simple-2]
+full_text=: :
+color=#717171
+
+[date]
+command=date '+%a %Y-%m-%d'
+interval=60
+
 [time]
-#label= 
-command=date '+%a %d %b %H:%M:%S'
+command=date '+%H:%M:%S'
 interval=1
 
 [shutdown_menu]
