--- a/i3/config
+++ b/i3/config
@@ -301,9 +301,10 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 bindsym $mod+p exec --no-startup-id ~/.config/i3/scripts/audio-device-switch
 
 ## App shortcuts
+bindsym $mod+c exec --no-startup-id anki
 bindsym $mod+b exec --no-startup-id /usr/bin/zen-browser
 bindsym $mod+o exec --no-startup-id /usr/bin/obsidian
-bindsym $mod+c exec --no-startup-id /usr/bin/discord
+bindsym $mod+m exec --no-startup-id /usr/bin/discord
 bindsym $mod+e exec --no-startup-id /usr/bin/thunar
 
 #bindsym Print exec --no-startup-id scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
