--- a/i3/config
+++ b/i3/config
@@ -185,10 +185,10 @@ bindsym $mod+Shift+e exec --no-startup-id ~/.config/i3/scripts/powermenu
 # lock with a picture:
 #bindsym $mod+l exec --no-startup-id i3lock -i  ~/.config/i3/i3-lock-screen.png -p default|win -t
 # lock by blurring the screen:
-bindsym $mod+Shift+l exec --no-startup-id ~/.config/i3/scripts/blur-lock
+#bindsym $mod+Shift+l exec --no-startup-id ~/.config/i3/scripts/blur-lock
 
 # lock in case after sleep
-exec --no-startup-id xss-lock -l ~/.config/i3/scripts/blur-lock
+#exec --no-startup-id xss-lock -l ~/.config/i3/scripts/blur-lock
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
