--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -13,3 +13,29 @@ launch=xdg-open ${url}
 label-letters=sadfjklewcmpgh
 #osc8-underline=always
 
+[colors]
+
+# Gruvbox material dark hard
+background=1D2021
+foreground=D4BE98
+
+regular0=1D2021
+regular1=EA6962
+regular2=A9B665
+regular3=D8A657
+regular4=7DAEA3
+regular5=D3869B
+regular6=89B482
+regular7=D4BE98
+
+bright0=504945
+bright1=EA6962
+bright2=A9B665
+bright3=D8A657
+bright4=7DAEA3
+bright5=D3869B
+bright6=89B482
+bright7=DDC7A1
+
+selection-background=3C3836
+selection-foreground=D4BE98
