Updated padding and colors for appmenu

--- a/waybar/config
+++ b/waybar/config
@@ -9,7 +9,7 @@
     "spacing": 0,
 
     "include": [
-        "~/.config/waybar/modules.json"
+        "/home/byu/.config/waybar/modules.json"
     ],
 
     "modules-left": [
