revert: swayimg config

--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -23,8 +23,8 @@ office_view = [ { run = 'fish -c "zaread %s"', block = true, desc = "Zaread" } ]
 office_edit = [ { run = 'fish -c "libreoffice %s"', orphan = true, desc = "LibreOffice" } ]
 ebook_edit  = [ { run = 'fish -c "calibre %s"', orphan = true, desc = "Calibre" } ]
 edit        = [ { run = 'nvim "%s"', block = true } ]
-view        = [ { run = 'swayimg "%s"', orphan = true } ]
-pdf         = [ { run = 'zathura "%s"', orphan = true } ]
+view        = [ { run = 'swayimg "%s"', orphan = true, desc = "Swayimg"} ]
+pdf         = [ { run = 'zathura "%s"', orphan = true, desc = "Zathura" } ]
 play        = [ { run = 'mpv "%s"', orphan = true } ]
 open        = [ { run = 'xdg-open "%s"', desc = "Open" } ]
 
